<resources>

    <string name="title_activity_naw_drawer">NawDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="naw_knjige">Knjige</string>
    <string name="naw_aktivnosti">Aktivnosti</string>
    <string name="naw_lista_zelja">Lista želja</string>
    <string name="naw_zahjevi">Moji zahtjevi</string>
    <string name="naw_settings">settings</string>
    <string name="naw_ime_prezime">Ime Prezime</string>
    <string name="naw_mail">mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_temporari">temporari</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_mojizahtjeviv2">mojizahtjeviv2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_name">OnlineLibrary</string>
    <string name="prijavite_se">Prijavite se</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="ne_mogu_da_pristupim_mom_nalogu">Ne mogu da pristupim mom nalogu</string>
    <string name="nemas_nalog">Nemaš nalog?</string>
    <string name="morate_ukucati_podatke_da_pristupite_sistemu">Morate ukucati podatke da pristupite sistemu.</string>
    <string name="zapamti_me">Zapamti me</string>
    <string name="nazad_na_log_in">Nazad na log in</string>
    <string name="posalji">Pošalji</string>
    <string name="ukucajte_trazeni_podatak_i_dobicete_email">Ukucajte traženi podatak i dobićete email sa instrukcijama kako da pristupite vašem nalogu.</string>
    <string name="sta_ste_zaboravili">Šta ste zaboravili?</string>
    <string name="uskoro_cete_dobiti_email_sa_instrukcijama">Uskoro ćete dobiti email sa instrukcijama kako da promijenite šifru.</string>
    <string name="uskoro_cete_dobiti_email_sa_usernameom">Uskoro ćete dobiti email sa vašim username-om.</string>
    <string name="ukoliko_ne_primite_email">Ukoliko ne primite email kontaktirajte administratora biblioteke.</string>
    <string name="povratak_na_log_in">Povratak na log in</string>
    <string name="zahtjev_uspjesno_poslat">Zahtjev uspješno poslat</string>
    <string name="moji_zahtjevi">Moji zahtjevi</string>
    <string name="lista_zelja">Lista želja</string>
    <string name="aktivnosti">Aktivnosti</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="moj_profil">Moj profil</string>
    <string name="log_out">Log out</string>
    <string name="knjige">Knjige</string>
    <string name="settings">Settings</string>
    <string name="jmbg">JMBG</string>
    <string name="korisnicko_ime">Korisničko ime</string>
    <string name="sifra">Šifra</string>
    <string name="zaduzene_knjige">Zadužene knjige</string>
    <string name="vracene_knjige">Vraćene knjige</string>
    <string name="rezervacije">Rezervacije</string>
    <string name="ime">Ime</string>
    <string name="stara_sifra">Stara šifra</string>
    <string name="nova_sifra">Nova šifra</string>
    <string name="ukucajte_staru_sifru">Ukucajte staru šifru</string>
    <string name="ukucajte_novu_sifru">Ukucajte novu šifru</string>
    <string name="ponovo_ukucajte_novu_sifru">Ponovo ukucajte novu šifru</string>
    <string name="ponisti">Poništi</string>
    <string name="sacuvaj">Sačuvaj</string>
    <string name="edit_profil">Edit profil</string>
    <string name="nije_vracena">Nije vraćena</string>
    <string name="zaduzivanje">Zaduživanje</string>
    <string name="odbijeno">Odbijeno</string>
    <string name="rezervacija">Rezervacija</string>
    <string name="izdavanje_knjige">Izdavanje knjige</string>
    <string name="rezervacija_knjige">Rezervacija knjige</string>
    <string name="zahtjev_info">Zahtjev info</string>
    <string name="ponisti_rezervaciju">Poništi rezervaciju</string>
    <string name="izbrisi_transakciju">Izbriši transakciju</string>
    <string name="id_transakcije">ID transakcije</string>
    <string name="osoba_koja_je_izdala_knjigu">Osoba koja je izdala knjigu</string>
    <string name="period_rezervacije">Period rezervacije</string>
    <string name="detalji_zahtjeva">Detalji zahtjeva</string>
    <string name="filters">Filters</string>
    <string name="search">Search</string>
    <string name="pretrazi_knjige">Pretraži knjige</string>
    <string name="na_raspolaganju">Na raspolaganju</string>
    <string name="izdato">Izdato</string>
</resources>
